--- a/src/components/PlainCard/Pcard-style.css
+++ b/src/components/PlainCard/Pcard-style.css
@@ -13,7 +13,6 @@
   padding: 0.4rem 1.9rem;
 }
 .container-fluid{
-  padding:1rem;
-  margin: 0rem 3.2rem;
+  padding: 1rem 2rem;
   background-color: #f1d1d1;
 }
