--- a/src/components/Rows/Row-style.css
+++ b/src/components/Rows/Row-style.css
@@ -10,16 +10,18 @@
 }
 .heading{
   float: left;
-  padding-left: 3rem;
-  padding-top: 2rem;
-  padding-bottom: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   font-style: italic;
   font-size: 2rem;
-  
+
 }
 .top-button{
   float: right;
-  padding: 1rem;
   font-style: italic;
-  font-size: 1.2rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+  font-size: 1rem;
+  border-radius: 30%;
+
 }
